# orbitron

./: .gitignore  README.md  pyproject.toml
sat_ingest/adapters/stac_generic/: client.py  mapper.py
sat_ingest/cli/: __main__.py
sat_ingest/cli/commands/: download.py  search.py
sat_ingest/core/: auth.py  http.py  models.py  paginate.py  search.py  support_matrix.py
sat_ingest/core/adapters/: base.py
sat_ingest/core/storage/: base.py  local.py
tests/contract/: test_adapter_contract.py
