[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sat-ingest"
version = "0.1.0"
description = "Satellite data ingestion engine with per-source adapters"
authors = [{name = "Your Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27",
  "tenacity>=8.2",
  "pydantic>=2.7",
  "shapely>=2.0",
  "pyproj>=3.6",
  "tqdm>=4.66",
  "click>=8.1",
]

[project.scripts]
sat = "sat_ingest.cli.__main__:main"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]